--- a/source/style.css
+++ b/source/style.css
@@ -20,3 +20,20 @@ li {
   height: 160px;
   text-shadow: 0 0 3px #ff0000, 0 0 5px #0000ff;
 }
+/* Defining font and letter properties */
+.hours {
+  left: 120px;
+  font-size: 23.3333333333px;
+  letter-spacing: -1.6px;
+  line-height: 45px;
+}
+
+.hours li {
+  width: 80px;
+}
+/* Assigning span element as a block and radius to 50% */
+.hours span {
+  display: inline-block;
+  /* box-shadow: 1px 2px 1px 1px #d4e914; */
+  border-radius: 50%;
+}
